--- a/src/main/resources/templates/successful.html
+++ b/src/main/resources/templates/successful.html
@@ -10,8 +10,6 @@
 
     <h3>The notice posting id is <span th:text="${id}"></span></h3>
 
-    <form method="GET" action="/">
-        <button type="submit">Back</button>
-    </form>
+    <a th:href="@{'/'}">Back</a>
 </body>
 </html>
