--- a/src/main/resources/templates/unsuccessful.html
+++ b/src/main/resources/templates/unsuccessful.html
@@ -14,8 +14,6 @@
 
     <h3>Please make sure all entries are entered</h3>
 
-    <form method="GET" action="/">
-        <button type="submit">Back</button>
-    </form>
+    <a th:href="@{'/'}">Back</a>
 </body>
 </html>
